fixed banner overlap issue

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -177,7 +177,7 @@ line-height: 24px;
 
     .header-container,
     .header-container>div {
-        width: clamp(800px, 95%, 1368px) !important;
+        width: clamp(800px, 95%, 1200px) !important;
     }
 }
 
